--- a/src/App.css
+++ b/src/App.css
@@ -259,3 +259,9 @@ body {
 .course-progress.level-5>.level:nth-child(-n + 5) {
   background: #fddd5b;
 }
+
+.loader {
+  padding: 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+}
